# boulder-log

./: .gitignore  README.md  manage.py  pyproject.toml
boulder_log/core/: settings.py  urls.py
boulder_log/data/boulders/: models.py
boulder_log/data/boulders/migrations/: 0001_create_initial_boulder.py  0001_create_initial_boulder_model.py  0001_initial.py  0002_initial.py
boulder_log/data/equipment/: models.py
boulder_log/data/equipment/migrations/: 0001_initial.py  0002_initial.py
boulder_log/data/locations/: models.py
boulder_log/data/locations/migrations/: 0001_create_initial_location_model.py  0001_initial.py  0002_initial.py
boulder_log/data/users/: models.py
boulder_log/data/users/migrations/: 0001_create_initial_user.py  0001_initial.py
boulder_log/interface/djangoadmin/: _boulders.py  _equipment.py  _locations.py  _users.py  admin.py
boulder_log/templates/: index.html  layout.html
boulder_log/web/: asgi.py  wsgi.py
images/: IMG_1263.HEIC
notebooks/: image_colour_statistics.ipynb  problem_segmentation_by_colour.ipynb
tests/factories/: boulders.py  equipment.py  locations.py  users.py
tests/integration/data/boulders/: test_models.py
tests/integration/data/equipment/: test_models.py
tests/integration/data/locations/: test_models.py
tests/integration/data/users/: test_models.py
